--- a/k8s.yaml
+++ b/k8s.yaml
@@ -13,3 +13,6 @@ spec:
       - image: chenfeidocker/jenkins-demo:<BUILD_TAG>
         imagePullPolicy: IfNotPresent
         name: jenkins-demo
+        env:
+        - name: branch
+          value: <BRANCH_NAME>
